redisdeployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
spec:
  selector:
    matchLabels:
      app: redis-exporter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
      - name: redis-exporter
        image: oliver006/redis_exporter
        ports:
        - containerPort: 9121

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379


---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter-service
spec:
  selector:
    app: redis-exporter
  ports:
    - protocol: TCP
      port: 9121
      targetPort: 9121
